Paginas parametrizadas para acesso de usuario.

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon" />
+    <link rel="alternate icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-empresa.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no" />
@@ -15,7 +16,7 @@
     <meta name="msapplication-config" content="/browserconfig.xml" />
     <meta
       name="description"
-      content="Tecsol - Sistema de Gerenciamento - Otimizado para dispositivos móveis"
+      content="Tecsol - Sistema de Gerenciamento"
     />
     <title>Tecsol - Sistema</title>
   </head>
